--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,15 @@
-fastapi
+fastapi~=0.115.12
 uvicorn
-openai
-python-dotenv
-dotenv
-pydantic
-redis
+openai~=1.82.1
+python-dotenv~=1.1.0
+dotenv~=0.9.9
+pydantic~=2.11.5
+redis~=6.2.0
+requests~=2.32.3
+bs4~=0.0.2
+
+langchain-openai~=0.3.19
+qdrant-client~=1.14.2
+beautifulsoup4~=4.13.4
+langchain-community~=0.3.24
+langchain-text-splitters~=0.3.8
