--- a/requirements.txt
+++ b/requirements.txt
@@ -14,4 +14,5 @@ beautifulsoup4~=4.13.4
 langchain-community~=0.3.24
 langchain-text-splitters~=0.3.8
 langchain_qdrant
- python-multipart
+python-multipart
+pypdf
